--- a/statics/css/chat.css
+++ b/statics/css/chat.css
@@ -59,6 +59,7 @@ body {
 .chat-items {
     list-style: none;
     padding: 0;
+    height: 60px
 }
 
 .chat-items li {
@@ -66,12 +67,26 @@ body {
     cursor: pointer;
     color: #a4b0be;
     transition: background-color 0.3s;
+    height: 60px;
+    border-radius: 5px;
+    width: 220px;
+
 }
 
-.chat-items li:hover,
 .chat-items li.active {
     background-color: rgba(255, 255, 255, 0.1);
     font-weight: bold;
+    border-radius: 5px;
+    width: 220px;
+    height: 60px;
+}
+
+.chat-items li:hover {
+    background-color: rgba(255, 255, 255, 0.1);
+    font-weight: bold;
+    border-radius: 5px;
+    width: 220px;
+    height: 60px;
 }
 
 .chat-area {
@@ -109,9 +124,9 @@ body {
     border-radius: 12px;
     max-width: 80%;
     width: auto;
-    position: relative;
     color: #dcdde1;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+
 }
 
 .incoming {
@@ -151,7 +166,6 @@ body {
 
 .message-input input[type="text"] {
     flex: 1;
-
     width: 1180px;
     color: #dcdde1;
     padding: 12px;
@@ -398,4 +412,93 @@ label[for="imageUpload"]:hover {
 
 label[for="imageUpload"] span {
     pointer-events: none;
+}
+
+.delete-chat {
+    position: absolute;
+    margin-left: 1350px;
+    margin-top: -27px;
+}
+
+
+.card {
+    width: 300px;
+    height: 220px;
+    background-color: #323742;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 20px;
+    gap: 10px;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    border-radius: 8px;
+    box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.1);
+    z-index: 9999;
+}
+
+.cookieHeading {
+    font-size: 1.2em;
+    font-weight: 800;
+    color: rgb(153 153 153);
+}
+
+.cookieDescription {
+    text-align: center;
+    font-size: 0.7em;
+    font-weight: 600;
+    color: rgb(99, 99, 99);
+}
+
+.buttonContainer {
+    display: flex;
+    gap: 20px;
+    flex-direction: row;
+}
+
+.acceptButton {
+    width: 80px;
+    height: 30px;
+    background-color: #4a5160;
+    transition-duration: .2s;
+    border: none;
+    color: rgb(241, 241, 241);
+    cursor: pointer;
+    font-weight: 600;
+    border-radius: 20px;
+}
+
+.declineButton {
+    width: 80px;
+    height: 30px;
+    background-color: rgb(218, 218, 218);
+    transition-duration: .2s;
+    color: rgb(46, 46, 46);
+    border: none;
+    cursor: pointer;
+    font-weight: 600;
+    border-radius: 20px;
+}
+
+.declineButton:hover {
+    background-color: #ebebeb;
+    transition-duration: .2s;
+}
+
+.acceptButton:hover {
+    background-color: #2a2e38;
+    transition-duration: .2s;
+}
+
+.trash {
+    color: #939393;
+}
+
+p {
+    position: relative;
+    margin-top: -34px;
+    margin-left: 70px
 }
