--- a/templates/chat.html
+++ b/templates/chat.html
@@ -7,9 +7,6 @@
   <link rel="stylesheet" href="{% static 'css/chat.css' %}">
 </head>
 <body>
-    <style>
-
-</style>
   <div class="telegram">
     <header class="telegram-header">
       <a href="{% url 'my_profile' %}">
@@ -19,13 +16,31 @@
         </div>
       </a>
       <a href="{% url 'search' %}">
-
         <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
             <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0"/>
         </svg>
       </a>
     </header>
     <hr>
+        <div class="card" style="display: none;">
+
+            <svg xmlns="http://www.w3.org/2000/svg" width="122.88" height="122.25" fill="currentColor" class="trash" viewBox="0 0 16 16">
+                <path d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5m2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5m3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0z"/>
+                <path d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1zM4.118 4 4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4zM2.5 3h11V2h-11z"/>
+            </svg>
+            <p class="cookieHeading">Delete chat.</p>
+            <p class="cookieDescription">Are you sure you want to delete this chat?</p>
+
+            <div class="buttonContainer">
+                <form method="post" action="{% url 'delete_chat' chat_id=chat_id %} ">
+                    {% csrf_token %}
+                    <button class="acceptButton" type="submit">Delete</button>
+                </form>
+                <button class="declineButton">Cancel</button>
+            </div>
+        </div>
+    </div>
+
     <main class="telegram-main">
       <aside class="chat-list">
         <h2>Chats</h2>
@@ -33,16 +48,32 @@
                 <ul class="chat-items">
                     <a href="{% url 'chat' chat.pk %}">
                         {% if chat.person.user != user  %}
-                            <li>
-                                <img src="{{ chat.person.profile_img.url }}" alt="Robert Johnson's Profile Image" class="profile-img">
-                                {{chat.person.first_name}}
-                            </li>
+                            {% if chat.id == chat_id %}
+                                <li class="active">
+                                    <img src="{{ chat.person.profile_img.url }}" alt="Robert Johnson's Profile Image" class="profile-img">
+                                    <p>{{chat.person.first_name}}</p>
+
+                                </li>
+                            {% else %}
+                                <li>
+                                    <img src="{{ chat.person.profile_img.url }}" alt="Robert Johnson's Profile Image" class="profile-img">
+                                    <p>{{chat.person.first_name}}</p>
+
+                                </li>     
+                            {% endif %}
+                                
                         {% else %}
-                            <li>
-                                <img src="{{ chat.you.profile_img.url }}" alt="Robert Johnson's Profile Image" class="profile-img">
-                                {{chat.you.first_name}}
-                            </li>
-                            
+                            {% if chat.id == chat_id %}
+                                <li class="active">
+                                    <img src="{{ chat.you.profile_img.url }}" alt="Robert Johnson's Profile Image" class="profile-img">
+                                    <p>{{chat.you.first_name}}</p>
+                                </li>
+                            {% else %}
+                                <li>
+                                    <img src="{{ chat.you.profile_img.url }}" alt="Robert Johnson's Profile Image" class="profile-img">
+                                    <p>{{chat.you.first_name}}</p>
+                                </li>
+                            {% endif %}
                         {% endif %}
                     </a>
                 </ul>
@@ -55,6 +86,13 @@
           {% else %}
             <h2>{{ chat.you.first_name }} {{ chat.you.last_name }}</h2>
           {% endif %}
+        <div class="delete-chat">
+            <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-person-dash-fill" viewBox="0 0 16 16">
+                <path fill-rule="evenodd" d="M11 7.5a.5.5 0 0 1 .5-.5h4a.5.5 0 0 1 0 1h-4a.5.5 0 0 1-.5-.5"/>
+                <path d="M1 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6"/>
+            </svg>
+        </div>
+
         </header>
         <div class="messages">
             {% for message in messages %}
@@ -116,5 +154,7 @@
     </main>
   </div>
   <script src="{% static 'js/img.js' %}"></script>
+  <script src="{% static 'js/delete.js' %}"></script>
+
 </body>
 </html>
