--- a/templates/profile_detail.html
+++ b/templates/profile_detail.html
@@ -9,7 +9,8 @@
 
 </head>
 <body>
-    <button class="go-back-button"><i class="fa fa-arrow-left"></i><a href="{% url 'home' %}">Go Back</a></button>
+    <a href="{% url 'home' %}"><button class="go-back-button"><i class="fa fa-arrow-left"></i>Go Back</button></a>
+
 
   <div class="profile-container">
     
