--- a/statics/css/chat.css
+++ b/statics/css/chat.css
@@ -423,7 +423,7 @@ label[for="imageUpload"] span {
 
 .card {
     width: 300px;
-    height: 220px;
+    height: 250px;
     background-color: #323742;
     display: flex;
     flex-direction: column;
@@ -444,13 +444,20 @@ label[for="imageUpload"] span {
     font-size: 1.2em;
     font-weight: 800;
     color: rgb(153 153 153);
+    margin-top: -10px;
+    margin-right: 70px;
+
+
 }
+
 
 .cookieDescription {
     text-align: center;
     font-size: 0.7em;
     font-weight: 600;
-    color: rgb(99, 99, 99);
+    margin-right: 70px;
+    color: #666;
+    margin-top: 10px;
 }
 
 .buttonContainer {
