--- a/statics/css/profile_detail.css
+++ b/statics/css/profile_detail.css
@@ -30,9 +30,7 @@ body {
     transition: transform 0.3s ease-in-out;
 }
 
-.profile-header h1:hover {
-    transform: scale(1.05);
-}
+
 
 .profile-header img {
     width: 150px;
@@ -44,9 +42,7 @@ body {
     transition: transform 0.3s ease-in-out;
 }
 
-.profile-header img:hover {
-    transform: scale(1.1);
-}
+
 
 .profile-details h2 {
     margin-bottom: 10px;
@@ -189,26 +185,83 @@ label {
     transform: scale(1.1);
 }
 
-.go-back-button {
-    background-color: #19232d;
-    color: white;
+.exit {
+    margin-left: 565px;
+    margin-top: -35px;
+
+}
+
+.card {
+    width: 300px;
+    height: 250px;
+    background-color: #17191e;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 20px;
+    gap: 10px;
+    position: fixed;
+    top: 40%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    border-radius: 8px;
+    box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.1);
+    z-index: 9999;
+}
+
+.cookieHeading {
+    font-size: 1.2em;
+    font-weight: 800;
+    color: rgb(153 153 153);
+    margin-bottom: 0px;
+    margin-right: 0px;
+}
+
+.cookieDescription {
+    text-align: center;
+    font-size: 15px;
+    margin-right: 0px;
+    color: #666;
+    margin-top: 10px;
+}
+
+.buttonContainer {
+    display: flex;
+    gap: 20px;
+    flex-direction: row;
+}
+
+.acceptButton {
+    width: 80px;
+    height: 30px;
+    background-color: #4a5160;
+    transition-duration: .2s;
     border: none;
-    padding: 10px 20px;
+    color: rgb(241, 241, 241);
     cursor: pointer;
-    margin-bottom: 20px;
-    border-radius: 5px;
-    transition: background-color 0.3s ease;
+    font-weight: 600;
+    border-radius: 20px;
 }
 
-.go-back-button i {
-    margin-right: 5px;
+.declineButton {
+    width: 80px;
+    height: 30px;
+    background-color: rgb(218, 218, 218);
+    transition-duration: .2s;
+    color: rgb(46, 46, 46);
+    border: none;
+    cursor: pointer;
+    font-weight: 600;
+    border-radius: 20px;
 }
 
-.go-back-button:hover {
-    background-color: #253341;
+.declineButton:hover {
+    background-color: #ebebeb;
+    transition-duration: .2s;
 }
 
-a {
-    text-decoration: none;
-    color: #fff;
+.acceptButton:hover {
+    background-color: #2a2e38;
+    transition-duration: .2s;
 }
