--- a/statics/css/search.css
+++ b/statics/css/search.css
@@ -103,23 +103,11 @@ body {
     font-size: 14px;
 }
 
-.go-back-button {
-    background-color: #19232d;
-    color: white;
-    border: none;
-    padding: 10px 20px;
-    cursor: pointer;
-    margin-bottom: 20px;
-    border-radius: 5px;
-    transition: background-color 0.3s ease;
-}
-
-.go-back-button i {
-    margin-right: 5px;
-}
-
-.go-back-button:hover {
-    background-color: #253341;
+.go-back {
+    position: absolute;
+    margin-right: 94%;
+    width: 100px;
+    margin-bottom: 910px;
 }
 
 a {
